@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180129"
-#define public MagickPackageReleaseDate "snapshot-20180129"
+#define public MagickPackageVersionAddendum ".020180130"
+#define public MagickPackageReleaseDate "snapshot-20180130"
