@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2018-01-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/static.c: Use !defined(SupportMagickModules) to enable
+static module loader.  Fixes SourceForge bug #543 &quot;Multiple
+definition of &quot;OpenModule&quot; (etc) when cross-compiling shared&quot;.</li>
+</ul>
+</blockquote>
 <p>2018-01-29  Greg Wolfe  &lt;<a class="reference external" href="mailto:gregory&#46;wolfe&#37;&#52;&#48;kodakalaris&#46;com">gregory<span>&#46;</span>wolfe<span>&#64;</span>kodakalaris<span>&#46;</span>com</a>&gt;</p>
 <blockquote>
 <ul class="simple">
