@@ -1,3 +1,9 @@
+2018-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/static.c: Use !defined(SupportMagickModules) to enable
+	static module loader.  Fixes SourceForge bug #543 "Multiple
+	definition of "OpenModule" (etc) when cross-compiling shared".
+
 2018-01-29  Greg Wolfe  <gregory.wolfe@kodakalaris.com>
 
 	* coders/svg.c (SVGStartElement): A terminating '>' in
